<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".ui.home.network.AddNetworkFragment">

    <FrameLayout
        android:id="@+id/toolbarAddNetwork"
        android:paddingHorizontal="8dp"
        android:paddingBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="74dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBack"
            android:padding="4dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_gravity="bottom"
            android:tint="@color/blue500"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="30dp"
            android:layout_height="30dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtNetwork"
            android:layout_gravity="bottom"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/add_network"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>

    </FrameLayout>

    <LinearLayout
        android:layout_weight="1"
        android:clipToPadding="false"
        android:paddingVertical="16dp"
        android:paddingHorizontal="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/new_rpc_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtDesc"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:text="@string/label_add_network1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiyNameNet"
            android:layout_marginTop="16dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_network"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNameNet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiyURL_RPC"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_rpc_url"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtURL_RPC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiyChainId"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/chain_id"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtChainId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiySymbol"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/currency_symbol"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtSymbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tiyRL_Explorer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/block_explorer_url"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtURL_Explorer"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddNetwork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginTop="24dp"
            android:background="@drawable/bg_btn_wallet1"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/input"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>