<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    android:orientation="vertical"
    tools:context=".ui.addWallet.importWallet.ImportKeyFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="Nhập khóa cá nhân"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiyKeyPrivate"
        android:layout_marginTop="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_qr_code_scanner_24"
        android:hint="Nhập khóa cá nhân">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtKeyPrivate"
            tools:text="@string/private_key_demo"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiyNewPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        app:passwordToggleEnabled="true"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPass"
            tools:text="12345678"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiyConfirmPass"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        app:passwordToggleEnabled="true"
        app:helperText="@string/least_8_character">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtConfirmPass"
            tools:text="12345678"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtRemember"
            android:layout_weight="1"
            android:text="@string/login_by_biometric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Switch
            android:id="@+id/swDefault"
            android:thumb="@drawable/switch_thumb_selector"
            android:track="@drawable/switch_track_selector"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_btn_wallet1"
        android:gravity="center"
        android:text="@string/input"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Space
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTAndC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/t_and_c"
        android:textSize="12sp" />

</LinearLayout>