<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

   <androidx.appcompat.widget.AppCompatImageView
       android:id="@+id/appCompatImageView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:scaleType="fitXY"
       android:src="@drawable/welcome_bg3" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guidelineStart"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_begin="24dp" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guidelineEnd"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       app:layout_constraintGuide_end="24dp" />

   <androidx.constraintlayout.widget.Guideline
       android:id="@+id/guidelineBottom"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       app:layout_constraintGuide_end="16dp" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/txtTitle"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="24dp"
       android:gravity="center"
       android:text="@string/wallet_settings"
       android:textColor="@color/black"
       android:textSize="20sp"
       android:textStyle="bold"
       app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
       app:layout_constraintStart_toStartOf="@+id/guidelineStart"
       app:layout_constraintTop_toTopOf="parent" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/txtLabel1"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:layout_marginTop="20dp"
       android:gravity="center"
       android:text="@string/create_wallet_or_import_wallet"
       android:textColor="@color/black"
       android:textSize="15sp"
       app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
       app:layout_constraintStart_toStartOf="@+id/guidelineStart"
       app:layout_constraintTop_toBottomOf="@+id/txtTitle" />


   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btnAddWallet"
       app:layout_constraintVertical_bias="0.85"
       android:layout_width="0dp"
       android:textSize="15sp"
       android:layout_height="wrap_content"
       android:background="@drawable/bg_btn_wallet2"
       android:gravity="center"
       android:text="@string/label_create_wallet"
       android:textAllCaps="false"
       android:textColor="@color/blue600"
       app:layout_constraintBottom_toTopOf="@+id/btnImportPrivate"
       app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
       app:layout_constraintStart_toStartOf="@+id/guidelineStart"
       app:layout_constraintTop_toBottomOf="@+id/txtLabel1"
       app:layout_constraintVertical_chainStyle="packed" />

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btnImportPhrase"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:textSize="15sp"
       android:layout_marginTop="16dp"
       android:background="@drawable/bg_btn_wallet1"
       android:gravity="center"
       android:text="@string/label_import_secret_recovery_phrase"
       android:textAllCaps="false"
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/txtTAndC"
       app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
       app:layout_constraintStart_toStartOf="@+id/guidelineStart"
       app:layout_constraintTop_toBottomOf="@+id/btnImportPrivate" />

   <androidx.appcompat.widget.AppCompatButton
       android:id="@+id/btnImportPrivate"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:textSize="15sp"
       android:layout_marginTop="16dp"
       android:background="@drawable/bg_btn_wallet1"
       android:gravity="center"
       android:text="@string/label_import_private_key"
       android:textAllCaps="false"
       android:textColor="@color/white"
       app:layout_constraintBottom_toTopOf="@+id/btnImportPhrase"
       app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
       app:layout_constraintStart_toStartOf="@+id/guidelineStart"
       app:layout_constraintTop_toBottomOf="@+id/btnAddWallet" />

   <androidx.appcompat.widget.AppCompatTextView
       android:id="@+id/txtTAndC"
       android:layout_width="0dp"
       android:layout_height="wrap_content"
       android:gravity="center"
       android:text="@string/t_and_c"
       android:textSize="12sp"
       app:layout_constraintBottom_toBottomOf="@+id/guidelineBottom"
       app:layout_constraintEnd_toEndOf="@+id/guidelineEnd"
       app:layout_constraintStart_toStartOf="@+id/guidelineStart" />

</androidx.constraintlayout.widget.ConstraintLayout>